syntax = "proto3";
option go_package = "mighty/pong";

enum DataType {
  Hello = 0;
  GetId = 1;
  SetId = 2;
  GetCtx = 3;
  SetCtx = 4;
  Ready = 5;
  LostPoint = 6;
}

message CmdHello {
  string msg = 1;
}

message CmdIdGet {
  uint32 dummy = 1;
}

message CmdIdSet {
  uint32 id = 1;
  uint32 session = 2;
}

message CmdCtxGet {
  uint32 session = 1;
}

message CmdCtxSet {
  uint32 session = 1;
  uint32 left_id = 2;
  uint32 right_id = 3;
  int32 left_pos = 4;
  int32 right_pos = 5;
  int32 ball_vx = 6;
  int32 ball_vy = 7;
  int32 ball_posx = 8;
  int32 ball_posy = 9;
  uint32 ball_master = 10;
}

message CmdReady {
  uint32 session = 1;
  uint32 player = 2;
}

message CmdLostPoint {
  uint32 player = 1;
}

message PongData {
 DataType type = 1;

 oneof data {
    CmdHello hello = 2;
    CmdIdGet id_req = 3;
    CmdIdSet id_rsp = 4;
    CmdCtxGet ctx_req = 5;
    CmdCtxSet ctx_rsp = 6;
    CmdReady ready = 7;
    CmdLostPoint lost_point = 8;
  }
}
